--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
         <!-- Register Form -->
         <form id="registerForm" class="form" autocomplete="on" novalidate>
           <div class="input-box">
-            <label for="registerName">Full name</label>
+            <label for="registerName">User name</label>
             <input type="text" id="registerName" name="name" required autocomplete="name" />
           </div>
 
