--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
 
   <!-- Stylesheet (cache-bust query optional during development) -->
   <link rel="stylesheet" href="styles.css?v=1">
-
+  <script type="module" src="firebaseauth.js" defer></script>
   <!-- favicon (optional) -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⭐</text></svg>">
 </head>
