--- a/login.html
+++ b/login.html
@@ -5,10 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Login &amp; Register</title>
 
-  <!-- Stylesheet (cache-bust query optional during development) -->
-  <link rel="stylesheet" href="styles.css?v=1">
+  <!-- Stylesheet -->
+  <link rel="stylesheet" href="styles.css?v=2">
   <script type="module" src="firebaseauth.js" defer></script>
-  <!-- favicon (optional) -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⭐</text></svg>">
 </head>
 <body>
@@ -17,7 +16,6 @@
 
     <section class="form-box" aria-live="polite">
       <div class="buttons" role="tablist" aria-label="Authentication tabs">
-        <!-- Toggle buttons: type="button" prevents implicit submit -->
         <button id="loginBtn" class="active" type="button" role="tab" aria-selected="true">Login</button>
         <button id="registerBtn" type="button" role="tab" aria-selected="false">Register</button>
       </div>
@@ -26,12 +24,12 @@
         <!-- Login Form -->
         <form id="loginForm" class="form" autocomplete="on" novalidate>
           <div class="input-box">
-            <input type="email" id="loginEmail" name="email" required autocomplete="username" />
+            <input type="email" id="loginEmail" name="email" required autocomplete="username" placeholder=" " />
             <label for="loginEmail">Email</label>
           </div>
 
           <div class="input-box">
-            <input type="password" id="loginPassword" name="password" required autocomplete="current-password" />
+            <input type="password" id="loginPassword" name="password" required autocomplete="current-password" placeholder=" " />
             <label for="loginPassword">Password</label>
           </div>
 
@@ -42,17 +40,17 @@
         <!-- Register Form -->
         <form id="registerForm" class="form" autocomplete="on" novalidate>
           <div class="input-box">
-            <input type="text" id="registerName" name="name" required autocomplete="name" />
+            <input type="text" id="registerName" name="name" required autocomplete="name" placeholder=" " />
             <label for="registerName">User name</label>
           </div>
 
           <div class="input-box">
-            <input type="email" id="registerEmail" name="email" required autocomplete="email" />
+            <input type="email" id="registerEmail" name="email" required autocomplete="email" placeholder=" " />
             <label for="registerEmail">Email</label>
           </div>
 
           <div class="input-box">
-            <input type="password" id="registerPassword" name="password" required autocomplete="new-password" />
+            <input type="password" id="registerPassword" name="password" required autocomplete="new-password" placeholder=" " />
             <label for="registerPassword">Password</label>
           </div>
 
@@ -63,7 +61,6 @@
     </section>
   </main>
 
-  <!-- Script loaded with defer to run after parsing -->
   <script src="app.js" defer></script>
 </body>
 </html>
