--- a/login.html
+++ b/login.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Login &amp; Register</title>
 
-  <!-- Stylesheet -->
-  <link rel="stylesheet" href="styles.css?v=2">
+  <link rel="stylesheet" href="styles.css?v=3">
   <script type="module" src="firebaseauth.js" defer></script>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⭐</text></svg>">
 </head>
@@ -14,49 +13,52 @@
   <main class="container" aria-labelledby="page-title">
     <h1 id="page-title" class="welcome">Welcome Back 🙂</h1>
 
-    <section class="form-box" aria-live="polite">
-      <div class="buttons" role="tablist" aria-label="Authentication tabs">
-        <button id="loginBtn" class="active" type="button" role="tab" aria-selected="true">Login</button>
-        <button id="registerBtn" type="button" role="tab" aria-selected="false">Register</button>
-      </div>
+    <!-- NEW wrapper provides animated border; inner .form-box holds content -->
+    <section class="form-border">
+      <div class="form-box" aria-live="polite">
+        <div class="buttons" role="tablist" aria-label="Authentication tabs">
+          <button id="loginBtn" class="active" type="button" role="tab" aria-selected="true">Login</button>
+          <button id="registerBtn" type="button" role="tab" aria-selected="false">Register</button>
+        </div>
 
-      <div class="form-wrapper">
-        <!-- Login Form -->
-        <form id="loginForm" class="form" autocomplete="on" novalidate>
-          <div class="input-box">
-            <input type="email" id="loginEmail" name="email" required autocomplete="username" placeholder=" " />
-            <label for="loginEmail">Email</label>
-          </div>
+        <div class="form-wrapper">
+          <!-- Login Form -->
+          <form id="loginForm" class="form" autocomplete="on" novalidate>
+            <div class="input-box">
+              <input type="email" id="loginEmail" name="email" required autocomplete="username" placeholder=" " />
+              <label for="loginEmail">Email</label>
+            </div>
 
-          <div class="input-box">
-            <input type="password" id="loginPassword" name="password" required autocomplete="current-password" placeholder=" " />
-            <label for="loginPassword">Password</label>
-          </div>
+            <div class="input-box">
+              <input type="password" id="loginPassword" name="password" required autocomplete="current-password" placeholder=" " />
+              <label for="loginPassword">Password</label>
+            </div>
 
-          <button type="submit" class="btn">Login</button>
-          <p id="loginMessage" class="message" aria-live="polite"></p>
-        </form>
+            <button type="submit" class="btn">Login</button>
+            <p id="loginMessage" class="message" aria-live="polite"></p>
+          </form>
 
-        <!-- Register Form -->
-        <form id="registerForm" class="form" autocomplete="on" novalidate>
-          <div class="input-box">
-            <input type="text" id="registerName" name="name" required autocomplete="name" placeholder=" " />
-            <label for="registerName">User name</label>
-          </div>
+          <!-- Register Form -->
+          <form id="registerForm" class="form" autocomplete="on" novalidate>
+            <div class="input-box">
+              <input type="text" id="registerName" name="name" required autocomplete="name" placeholder=" " />
+              <label for="registerName">User name</label>
+            </div>
 
-          <div class="input-box">
-            <input type="email" id="registerEmail" name="email" required autocomplete="email" placeholder=" " />
-            <label for="registerEmail">Email</label>
-          </div>
+            <div class="input-box">
+              <input type="email" id="registerEmail" name="email" required autocomplete="email" placeholder=" " />
+              <label for="registerEmail">Email</label>
+            </div>
 
-          <div class="input-box">
-            <input type="password" id="registerPassword" name="password" required autocomplete="new-password" placeholder=" " />
-            <label for="registerPassword">Password</label>
-          </div>
+            <div class="input-box">
+              <input type="password" id="registerPassword" name="password" required autocomplete="new-password" placeholder=" " />
+              <label for="registerPassword">Password</label>
+            </div>
 
-          <button type="submit" class="btn">Register</button>
-          <p id="registerMessage" class="message" aria-live="polite"></p>
-        </form>
+            <button type="submit" class="btn">Register</button>
+            <p id="registerMessage" class="message" aria-live="polite"></p>
+          </form>
+        </div>
       </div>
     </section>
   </main>
